# vestige

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.template  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  test.yml
apps/dashboard/: package.json  svelte.config.js  vite.config.ts
apps/dashboard/.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
apps/dashboard/.svelte-kit/output/client/.vite/: manifest.json
apps/dashboard/.svelte-kit/output/client/_app/immutable/assets/: 0.T9JGZ_uB.css
apps/dashboard/.svelte-kit/output/client/_app/immutable/chunks/: 8PSwG_AU.js  BK028jHP.js  BolYP48w.js  CHfZNXj4.js  CtRgAcWZ.js  D-x7U94i.js  D6XtQ4nY.js  D6n3ggvw.js  DZf5toYK.js  rHGvVkdq.js  wmwKEafM.js
apps/dashboard/.svelte-kit/output/client/_app/immutable/entry/: start.BdzkYIOY.js
apps/dashboard/.svelte-kit/output/client/_app/immutable/nodes/: 0.CVv5sZN_.js  10.MRR5NpnA.js  3.DlJxvrxN.js  4.JZRJcAXm.js  6.BbuG7uIt.js  8.Dd_gKrfw.js
apps/dashboard/.svelte-kit/output/server/: index.js  manifest-full.js  remote-entry.js
apps/dashboard/.svelte-kit/output/server/.vite/: manifest.json
apps/dashboard/.svelte-kit/output/server/_app/immutable/assets/: _layout.CWCL9vmt.css
apps/dashboard/.svelte-kit/output/server/chunks/: api.js  index.js  index2.js  index3.js  internal.js  root.js  server.js  shared.js  state.svelte.js  websocket.js
apps/dashboard/.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
apps/dashboard/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
apps/dashboard/.svelte-kit/output/server/entries/pages/(app)/: _layout.svelte.js
apps/dashboard/.svelte-kit/output/server/entries/pages/(app)/explore/: _page.svelte.js
apps/dashboard/.svelte-kit/output/server/entries/pages/(app)/feed/: _page.svelte.js
apps/dashboard/.svelte-kit/output/server/entries/pages/(app)/graph/: _page.svelte.js
apps/dashboard/.svelte-kit/output/server/entries/pages/(app)/intentions/: _page.svelte.js
apps/dashboard/.svelte-kit/output/server/entries/pages/(app)/memories/: _page.svelte.js
apps/dashboard/.svelte-kit/output/server/entries/pages/(app)/settings/: _page.svelte.js
apps/dashboard/.svelte-kit/output/server/entries/pages/(app)/stats/: _page.svelte.js
apps/dashboard/.svelte-kit/output/server/nodes/: 0.js  1.js  10.js  11.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
apps/dashboard/.svelte-kit/types/: route_meta_data.json
apps/dashboard/.svelte-kit/types/src/routes/: $types.d.ts
apps/dashboard/.svelte-kit/types/src/routes/(app)/: $types.d.ts
apps/dashboard/.svelte-kit/types/src/routes/(app)/explore/: $types.d.ts
apps/dashboard/.svelte-kit/types/src/routes/(app)/feed/: $types.d.ts
apps/dashboard/.svelte-kit/types/src/routes/(app)/graph/: $types.d.ts
apps/dashboard/.svelte-kit/types/src/routes/(app)/intentions/: $types.d.ts
apps/dashboard/.svelte-kit/types/src/routes/(app)/memories/: $types.d.ts
apps/dashboard/.svelte-kit/types/src/routes/(app)/settings/: $types.d.ts
apps/dashboard/.svelte-kit/types/src/routes/(app)/stats/: $types.d.ts
apps/dashboard/.svelte-kit/types/src/routes/(app)/timeline/: $types.d.ts
apps/dashboard/src/: app.css  app.html
apps/dashboard/src/lib/components/: Graph3D.svelte  RetentionCurve.svelte
apps/dashboard/src/lib/stores/: api.ts  websocket.ts
apps/dashboard/src/lib/types/: index.ts
apps/dashboard/src/routes/: +layout.svelte  +page.svelte
apps/dashboard/src/routes/(app)/explore/: +page.svelte
apps/dashboard/src/routes/(app)/feed/: +page.svelte
apps/dashboard/src/routes/(app)/graph/: +page.svelte
apps/dashboard/src/routes/(app)/intentions/: +page.svelte
apps/dashboard/src/routes/(app)/memories/: +page.svelte
apps/dashboard/src/routes/(app)/settings/: +page.svelte
apps/dashboard/src/routes/(app)/stats/: +page.svelte
apps/dashboard/src/routes/(app)/timeline/: +page.svelte
crates/vestige-core/: Cargo.toml
crates/vestige-core/benches/: search_bench.rs
crates/vestige-core/src/: lib.rs
crates/vestige-core/src/advanced/: adaptive_embedding.rs  compression.rs  dreams.rs  intent.rs  mod.rs
crates/vestige-core/src/codebase/: patterns.rs
crates/vestige-core/src/consolidation/: mod.rs  phases.rs  sleep.rs
crates/vestige-core/src/embeddings/: code.rs  local.rs  mod.rs
crates/vestige-core/src/fsrs/: mod.rs
crates/vestige-core/src/memory/: mod.rs  node.rs
crates/vestige-core/src/neuroscience/: emotional_memory.rs  hippocampal_index.rs  memory_states.rs  mod.rs  predictive_retrieval.rs  prospective_memory.rs
crates/vestige-core/src/search/: hybrid.rs  hyde.rs  mod.rs  reranker.rs  vector.rs
crates/vestige-core/src/storage/: migrations.rs  mod.rs  sqlite.rs
crates/vestige-mcp/: Cargo.toml
crates/vestige-mcp/src/: cognitive.rs  dashboard.html  graph.html  lib.rs  main.rs  server.rs
crates/vestige-mcp/src/dashboard/: events.rs  handlers.rs  mod.rs  state.rs  static_files.rs  websocket.rs
crates/vestige-mcp/src/protocol/: http.rs  mod.rs  stdio.rs  types.rs
crates/vestige-mcp/src/resources/: codebase.rs  memory.rs
crates/vestige-mcp/src/tools/: changelog.rs  checkpoint.rs  codebase.rs  codebase_unified.rs  consolidate.rs  context.rs  dedup.rs  dream.rs  explore.rs  feedback.rs  graph.rs  health.rs  importance.rs  ingest.rs  intention_unified.rs  intentions.rs  knowledge.rs  maintenance.rs  memory_states.rs  memory_unified.rs  mod.rs  predict.rs  recall.rs  restore.rs  review.rs  search.rs  search_unified.rs  session_context.rs  smart_ingest.rs  stats.rs  tagging.rs  timeline.rs
docs/: CLAUDE-SETUP.md  CONFIGURATION.md  FAQ.md  SCIENCE.md  STORAGE.md
docs/blog/: xcode-memory.md
docs/integrations/: cursor.md  jetbrains.md  vscode.md  windsurf.md  xcode.md
docs/launch/: blog-post.md  demo-script.md  show-hn.md
scripts/: xcode-setup.sh
tests/e2e/: Cargo.toml
tests/e2e/src/harness/: db_manager.rs
tests/e2e/src/mocks/: fixtures.rs
(+1 files in other folders)
