[workspace]
resolver = "2"
members = [
    "crates/vestige-core",
    "crates/vestige-mcp",
    "tests/e2e",
]
exclude = [
    "fastembed-rs",
]

[workspace.package]
version = "1.9.2"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/samvallad33/vestige"
authors = ["Sam Valladares"]

[workspace.dependencies]
# Share deps across workspace
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.dev]
opt-level = 1
