[package]
name = "vestige-mcp"
version = "1.1.2"
edition = "2021"
description = "Cognitive memory MCP server for Claude - FSRS-6, spreading activation, synaptic tagging, and 130 years of memory research"
authors = ["samvallad33"]
license = "MIT OR Apache-2.0"
keywords = ["mcp", "ai", "memory", "fsrs", "neuroscience", "cognitive-science", "spaced-repetition"]
categories = ["command-line-utilities", "database"]
repository = "https://github.com/samvallad33/vestige"

[features]
default = ["embeddings", "vector-search", "http"]
embeddings = ["vestige-core/embeddings"]
vector-search = ["vestige-core/vector-search"]
http = ["dep:axum", "dep:futures"]

[[bin]]
name = "vestige-mcp"
path = "src/main.rs"

[[bin]]
name = "vestige-restore"
path = "src/bin/restore.rs"

[[bin]]
name = "vestige"
path = "src/bin/cli.rs"

[dependencies]
# ============================================================================
# VESTIGE CORE - The cognitive science engine
# ============================================================================
# Includes: FSRS-6, spreading activation, synaptic tagging, hippocampal indexing,
# memory states, context memory, importance signals, dreams, and more
vestige-core = { version = "1.0.0", path = "../vestige-core" }

# ============================================================================
# MCP Server Dependencies
# ============================================================================
# Async runtime
tokio = { version = "1", features = ["full", "io-std"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Platform directories
directories = "6"

# Official Anthropic MCP Rust SDK
rmcp = "0.14"

# HTTP transport (optional, behind "http" feature)
axum = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }

# CLI
clap = { version = "4", features = ["derive"] }
colored = "3"

[dev-dependencies]
tempfile = "3"
