[package]
name = "vestige-mcp"
version = "2.0.0"
edition = "2024"
description = "Cognitive memory MCP server for Claude - FSRS-6, spreading activation, synaptic tagging, 3D dashboard, and 130 years of memory research"
authors = ["samvallad33"]
license = "AGPL-3.0-only"
keywords = ["mcp", "ai", "memory", "fsrs", "neuroscience", "cognitive-science", "spaced-repetition"]
categories = ["command-line-utilities", "database"]
repository = "https://github.com/samvallad33/vestige"

[features]
default = ["embeddings", "vector-search"]
embeddings = ["vestige-core/embeddings"]
vector-search = ["vestige-core/vector-search"]

[[bin]]
name = "vestige-mcp"
path = "src/main.rs"

[[bin]]
name = "vestige-restore"
path = "src/bin/restore.rs"

[[bin]]
name = "vestige"
path = "src/bin/cli.rs"

[dependencies]
# ============================================================================
# VESTIGE CORE - The cognitive science engine
# ============================================================================
# Includes: FSRS-6, spreading activation, synaptic tagging, hippocampal indexing,
# memory states, context memory, importance signals, dreams, and more
vestige-core = { version = "2.0.0", path = "../vestige-core" }

# ============================================================================
# MCP Server Dependencies
# ============================================================================
# Async runtime
tokio = { version = "1", features = ["full", "io-std"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Platform directories
directories = "6"

# Official Anthropic MCP Rust SDK
rmcp = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }
colored = "3"

# SQLite (for backup WAL checkpoint)
rusqlite = { version = "0.38", features = ["bundled"] }

# Dashboard (v1.2) - hyper/tower already in Cargo.lock via rmcp/reqwest
axum = { version = "0.8", default-features = false, features = ["json", "query", "tokio", "http1", "ws"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "set-header"] }
futures-util = "0.3"
open = "5"

# Embedded SvelteKit dashboard (v2.0)
include_dir = "0.7"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
